Create spooky portfolio website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hall of Spirits</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
+</head>
+<body>
+  <header>
+    <h1>Hall of Spirits</h1>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#portfolio">Portfolio</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
 
+  <section id="about">
+    <h2>About Me</h2>
+    <p>I'm a developer who enjoys creating eerie experiences on the web.</p>
+  </section>
+
+  <section id="portfolio">
+    <h2>Portfolio</h2>
+    <ul class="project-list">
+      <li>
+        <h3>Project 1</h3>
+        <p>A haunted memory game that tests your wits.</p>
+      </li>
+      <li>
+        <h3>Project 2</h3>
+        <p>A ghostly chat bot that answers your darkest questions.</p>
+      </li>
+    </ul>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Feel free to reach out if you dare: <a href="mailto:ghost@example.com">ghost@example.com</a></p>
+  </section>
+
+  <footer>
+    <p>&copy; 2023 Hall of Spirits</p>
+  </footer>
+</body>
+</html>
