Update biography and use purple accent

--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>My name is Christopher Jezorek. I've been programming since I was 12 or 13, starting with pygame. Over the years I've built countless mini game projects for fun and worked professionally as a software test engineer on titles such as the Xbox Series X|S Backwards Compatibility program, NBA 2k20 and Forza Motorsport.</p>
+    <p>
+      My name is Christopher Jezorek. I've been programming since I was 12 or 13
+      when I first discovered <strong>pygame</strong>. Ever since, I've spent my
+      free time crafting small game projects while building a professional
+      career as a software test engineer. I've contributed to the Xbox Series
+      X|S Backwards Compatibility program, NBA&nbsp;2k20, and Forza Motorsport.
+    </p>
   </section>
 
   <section id="portfolio">
@@ -40,7 +46,10 @@
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Feel free to reach out if you dare: <a href="mailto:christopher@example.com">christopher@example.com</a></p>
+    <p>
+      Feel free to reach out if you dare:
+      <a href="mailto:jezorekc@gmail.com">jezorekc@gmail.com</a>
+    </p>
   </section>
 
   <footer>
