Update portfolio with roguelike toolbox

--- a/index.html
+++ b/index.html
@@ -1,1 +1,58 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hall of Spirits</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
+</head>
+<body>
+  <header>
+    <h1>Hall of Spirits</h1>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#portfolio">Portfolio</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
 
+  <section id="about">
+    <h2>About Me</h2>
+    <p>
+      My name is Christopher Jezorek. I've been programming since I was 12 or 13
+      when I first discovered <strong>pygame</strong>. Ever since, I've spent my
+      free time crafting small game projects while building a professional
+      career as a software test engineer. I've contributed to the Xbox Series
+      X|S Backwards Compatibility program, NBA&nbsp;2k20, and Forza Motorsport.
+      I'm currently developing a roguelike toolbox to help Dungeon Masters run
+      their TTRPG dungeons.
+    </p>
+  </section>
+
+  <section id="portfolio">
+    <h2>Portfolio</h2>
+    <ul class="project-list">
+      <li>
+        <h3>Roguelike Toolbox</h3>
+        <p>A Dungeon Master aid packed with generators and tools for crafting
+        challenging adventures.</p>
+      </li>
+    </ul>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>
+      Feel free to reach out if you dare:
+      <a href="mailto:jezorekc@gmail.com">jezorekc@gmail.com</a>
+    </p>
+  </section>
+
+  <footer>
+    <p>&copy; 2023 Hall of Spirits</p>
+  </footer>
+</body>
+</html>
