Add link to Roguelike Toolbox project

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <h2>Portfolio</h2>
     <ul class="project-list">
       <li>
-        <h3>Roguelike Toolbox</h3>
+        <h3><a href="https://elixexorcist.github.io/roguelike-toolbox/">Roguelike Toolbox</a></h3>
         <p>A Dungeon Master aid packed with generators and tools for crafting
         challenging adventures.</p>
       </li>
