Refine portfolio styling for professional feel

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -22,13 +22,13 @@
   <section id="about">
     <h2>About Me</h2>
     <p>
-      My name is Christopher Jezorek. I've been programming since I was 12 or 13
-      when I first discovered <strong>pygame</strong>. Ever since, I've spent my
-      free time crafting small game projects while building a professional
-      career as a software test engineer. I've contributed to the Xbox Series
-      X|S Backwards Compatibility program, NBA&nbsp;2k20, and Forza Motorsport.
-      I'm currently developing a roguelike toolbox to help Dungeon Masters run
-      their TTRPG dungeons.
+      My name is Christopher Jezorek. I began programming as a teenager after
+      discovering the Python library <strong>pygame</strong>. Since then, I have
+      built a career as a software test engineer while creating personal game
+      development projects. My professional experience includes contributions to
+      the Xbox Series X|S Backwards Compatibility program, NBA&nbsp;2K20, and
+      Forza Motorsport. I am currently developing a roguelike toolbox to help
+      Dungeon Masters manage their tabletop sessions.
     </p>
   </section>
 
@@ -46,7 +46,7 @@
   <section id="contact">
     <h2>Contact</h2>
     <p>
-      Feel free to reach out if you dare:
+      Feel free to reach out with any questions or business inquiries:
       <a href="mailto:jezorekc@gmail.com">jezorekc@gmail.com</a>
     </p>
   </section>
